--- a/kuwaituni.html
+++ b/kuwaituni.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مُعاون</title>
+    <title>الجامعات في الكويت</title>
     <link rel="stylesheet" href="/style.css" > 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 <body>
     <nav>
         <ul>
@@ -22,17 +23,13 @@
         </form>
     </nav>
 
-    <h1 class="slogan"> خطط مستقبلك مع مُعاون</h1>
+    <h1 class="slogan"> الجامعات في الكويت </h1>
 
-    <div class="info">
-        <h3 class="intro">مرحبًا بك في معُاون وهو دليل الطالب الذي ستجد فيه كل المعلومات التي تحتاجها للتقديم إلى الجامعات في الكويت وخارج الكويت</h3>
-        <img class="intro"src="https://media4.giphy.com/media/IvQoSDYloMgRa/giphy.gif">
-        <h3 class="intro">تواريخ مهمة</h3>
-    </div>
+    
 
     <div class="footer">
         <p>التواصل الاجتماعي</p>
     </div>
-    
+
 </body>
 </html>
