--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مُعاون</title>
     <link rel="stylesheet" href="/style.css" > 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 <body>
     <nav>
         <ul>
@@ -32,7 +33,10 @@
 
     <div class="footer">
         <p>التواصل الاجتماعي</p>
+        <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
+        <a href="https://www.google.com/gmail/" class="fa fa-google"></a>
+        <a href="https://twitter.com/?lang=en" class="fa fa-twitter"></a>
     </div>
-    
+
 </body>
 </html>
