--- a/universities/universities.html
+++ b/universities/universities.html
@@ -44,6 +44,9 @@
 
     <div class="footer">
         <p>التواصل الاجتماعي</p>
+        <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
+        <a href="https://www.google.com/gmail/" class="fa fa-google"></a>
+        <a href="https://twitter.com/?lang=en" class="fa fa-twitter"></a>
     </div>
 
 </body>
