--- a/universities/kuwaitunis.html
+++ b/universities/kuwaitunis.html
@@ -10,8 +10,8 @@
 <body>
     <nav>
         <ul>
-            <li><img class ="logoPic" src ="./images/logo 1.PNG"></li>
-            <li><a href='./index.html'>الصفحة الرئيسية</a></li>
+            <li><img class ="logoPic" src ="../images/logo 1.PNG"></li>
+            <li><a href='../index.html'>الصفحة الرئيسية</a></li>
             <li><a href='./universities/universities.html'>الجامعات</a></li>
             <li><a href=''>الدورات</a></li>
             <li><a href=''>نصائح</a></li>
@@ -30,7 +30,7 @@
         <ul class="kuwaitUniversities">
 
             <li>
-                <a href="">
+                <a href="../kuwaitUniversities/ku.html">
                     <figure>
                         <img class="kuwaitUniversities" src="https://www.arabtimesonline.com/news/file/2020/02/kuwait-university.jpg" alt="جامعة الكويت" >
                         <figcaption>جامعة الكويت</figcaption>
