--- a/universities/kuwaitunis.html
+++ b/universities/kuwaitunis.html
@@ -12,9 +12,9 @@
         <ul>
             <li><img class ="logoPic" src ="../images/logo 1.PNG"></li>
             <li><a href='../index.html'>الصفحة الرئيسية</a></li>
-            <li><a href='./universities/universities.html'>الجامعات</a></li>
-            <li><a href=''>الدورات</a></li>
-            <li><a href=''>نصائح</a></li>
+            <li><a href='../universities/universities.html'>الجامعات</a></li>
+            <li><a href='../courses/courses.html'>الدورات</a></li>
+            <li><a href=''>اختبر نفسك</a></li>
         </ul>
 
         <form action="">
@@ -26,8 +26,10 @@
     <h1 class="slogan"> الجامعات في الكويت </h1>
 
     <p>
-
         <ul class="kuwaitUniversities">
+        <div display flex>
+
+        <div class="row1">
 
             <li>
                 <a href="../kuwaitUniversities/ku.html">
@@ -65,6 +67,10 @@
                 </a>
             </li>
 
+         </div>
+
+            <div class="row1">
+            
             <li>
                 <a href="">
                     <figure>
@@ -101,6 +107,10 @@
                 </a>
             </li>
 
+        </div>
+
+        <div class="row1">
+
             <li>
                 <a href="">
                     <figure>
@@ -127,8 +137,10 @@
                     </figure>
                 </a>
             </li>
+        </div>
 
-        </ul>
+        </div>
+    </ul>
 
     </p>
 
