--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مُعاون</title>
-    <link rel="stylesheet" href="/style.css" > 
+    <link rel="stylesheet" href="style.css" > 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <nav>
         <ul>
             <li><img class ="logoPic" src ="./images/logo 1.PNG"></li>
-            <li><a href='./index.html'>الصفحة الرئيسية</a></li>
+            <li><a href='../index.html'>الصفحة الرئيسية</a></li>
             <li><a href='./universities/universities.html'>الجامعات</a></li>
-            <li><a href=''>الدورات</a></li>
-            <li><a href=''>نصائح</a></li>
+            <li><a href='../courses/courses.html'>الدورات</a></li>
+            <li><a href=''>اختبر نفسك</a></li>
         </ul>
 
         <form action="">
@@ -38,5 +38,6 @@
         <a href="https://twitter.com/?lang=en" class="fa fa-twitter"></a>
     </div>
 
+    <script src=""></script>
 </body>
 </html>
