--- a/kuwaitUniversities/ku.html
+++ b/kuwaitUniversities/ku.html
@@ -13,8 +13,8 @@
             <li><img class ="logoPic" src ="../images/logo 1.PNG"></li>
             <li><a href='../index.html'>الصفحة الرئيسية</a></li>
             <li><a href='../universities/universities.html'>الجامعات</a></li>
-            <li><a href=''>الدورات</a></li>
-            <li><a href=''>نصائح</a></li>
+            <li><a href='../courses/courses.html'>الدورات</a></li>
+            <li><a href=''>اختبر نفسك</a></li>
         </ul>
 
         <form action="">
