--- a/courses/courses.html
+++ b/courses/courses.html
@@ -14,7 +14,7 @@
             <li><a href='/index.html'>الصفحة الرئيسية</a></li>
             <li><a href='../universities/universities.html'>الجامعات</a></li>
             <li><a href='../courses/courses.html'>الدورات</a></li>
-            <li><a href=''>اختبر نفسك</a></li>
+            <li><a href='../quiz/quiz.html'>اختبر نفسك</a></li>
         </ul>
 
         <form action="">
@@ -28,7 +28,7 @@
     <div class="twitter">
 
     <div class="twitterPage">
-        <p class="coursesTitle">دورات وزان لامتحانات قدرات - KIDS - SAT - GMAT - GRE</p>
+        <p class="coursesTitle">دورات وزان لامتحانات قدرات  KIDS - SAT - GMAT - GRE</p>
         <a class="twitter-timeline" href="https://twitter.com/wazzanMath?ref_src=twsrc%5Etfw"></a> 
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
