--- a/kuwaitUniversities/ku.html
+++ b/kuwaitUniversities/ku.html
@@ -14,7 +14,7 @@
             <li><a href='../index.html'>الصفحة الرئيسية</a></li>
             <li><a href='../universities/universities.html'>الجامعات</a></li>
             <li><a href='../courses/courses.html'>الدورات</a></li>
-            <li><a href=''>اختبر نفسك</a></li>
+            <li><a href='../quiz/quiz.html'>اختبر نفسك</a></li>
         </ul>
 
         <form action="">
