--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <h1 class="slogan"> خطط مستقبلك مع مُعاون</h1>
 
     <div class="info">
-        <h3 class="intro">مرحبًا بك في معُاون وهو دليل الطالب الذي ستجد فيه كل المعلومات التي تحتاجها للتقديم إلى الجامعات في الكويت وخارج الكويت</h3>
-        <img class="intro"src="https://media4.giphy.com/media/IvQoSDYloMgRa/giphy.gif">
-        <h3 class="intro">تواريخ مهمة</h3>
+        <h3 class="intro">مرحبًا بك في معُاون وهو دليل الطالب الذي ستجد فيه كل المعلومات التي تحتاجها للتقديم إلى الجامعات في الكويت وخارج الكويت<img class="logoPNG" src="./images/output-onlinepngtools.png"></h3>
+        <img class="gif"src="https://media4.giphy.com/media/IvQoSDYloMgRa/giphy.gif">
+        <h3 class="intro"><a href="https://www.mohe.edu.kw/site/">اضغط هنا لزيارة موقع التعليم العالي!</a><img class="ministry"src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1c/Emblem_of_Kuwait.svg/1200px-Emblem_of_Kuwait.svg.png"></h3>
     </div>
 
     <div class="footer">
