--- a/kuwaitUniversities/ku.html
+++ b/kuwaitUniversities/ku.html
@@ -25,7 +25,9 @@
 
     <h1 class="slogan">جامعة الكويت</h1>
 
-    <h3></h3>
+    <ul>
+        <li>جامعة الكويت مؤسسة حكومية في الكويت تمنح شهادات بكالوريوس وماجستير ودكتوراه للطلبة الملتحقين بها، تأسست في 8 أكتوبر 1966 وتضم 14 كلية. </li>
+    </ul>
     
     <div class="footer">
         <p>التواصل الاجتماعي</p>
