--- a/universities/kuwaitunis.html
+++ b/universities/kuwaitunis.html
@@ -41,7 +41,7 @@
             </li>
 
             <li>
-                <a href="">
+                <a href="../kuwaitUniversities/arabopenuni.html">
                     <figure>
                         <img class="kuwaitUniversities" src="https://s3.eu-north-1.amazonaws.com/images.free-apply.com/uni/gallery/lg/1041400007/2e421456145b637fea90f34637b9285d7d1f585f.jpg" alt="الجامعة العربية المفتوحة">
                         <figcaption>الجامعة العربية المفتوحة</figcaption>
