--- a/kuwaitUniversities/ku.html
+++ b/kuwaitUniversities/ku.html
@@ -25,8 +25,20 @@
 
     <h1 class="slogan">جامعة الكويت</h1>
 
-    <ul>
-        <li>جامعة الكويت مؤسسة حكومية في الكويت تمنح شهادات بكالوريوس وماجستير ودكتوراه للطلبة الملتحقين بها، تأسست في 8 أكتوبر 1966 وتضم 14 كلية. </li>
+    <ul class="boxes"> 
+        <div class="row2">
+        <li class="detail">جامعة الكويت مؤسسة حكومية في الكويت تمنح شهادات بكالوريوس وماجستير ودكتوراه للطلبة الملتحقين بها، تأسست في 8 أكتوبر 1966 وتضم 14 كلية. </li>
+        <li class="detail"> لابد على طلاب الثانوية العامة عمل اختبار القدرات العامة قبل الالتحاق بأي جامعة الكويت حيث أن احتساب المعدل المكافئ يعتمد على درجات الطلاب في امتحان القدرات ونسبته الثانوية.</li>
+        </div>
+        <div class="row2">
+        <li class="detail">الكليات في جامعة الكويت هي طب - طب اسنان - صيدلة - الصحة العامة - العلوم الطبية المساعدة - هندسة وبترول - عمارة - علوم حياتية - علوم ادارية - تربية - اداب - شريعة - علوم اجتماعية - علوم.</li>
+        <li class="detail"><a href="http://www.kuniv.edu/ku/ar/index.htm">قم بزيارة موقع جامعة الكويت</a>
+            <br>
+            <br>
+            <a href="https://www.instagram.com/kw.university/?hl=en" class="fa fa-instagram"></a></li>
+        </div>
+        <li><img class="pics" src="https://pbs.twimg.com/profile_images/1234107992997597185/DngbxpcV.jpg"></li>
+        
     </ul>
     
     <div class="footer">
