--- a/kuwaitUniversities/arabopenuni.html
+++ b/kuwaitUniversities/arabopenuni.html
@@ -32,7 +32,7 @@
         </div>
         <div class="row2">
         <li class="detail">تقدم الجامعة العربية المفتوحة مجموعة من برامج البكالوريوس مثل تخصص اللغة الانجليزية وادابها - برنامج تقنية المعلومات والحوسبة - برنامج ادارة الاعمال - برنامج التربية الخاصة.</li>
-        <li class="detail"><a href="https://www.arabou.edu.kw/Pages/default.aspx">قم بزيارة موقع جامعة الكويت</a>
+        <li class="detail"><a href="https://www.arabou.edu.kw/Pages/default.aspx">قم بزيارة موقع الجامعة العربية المفتوحة</a>
             <br>
             <br>
             <a href="https://www.instagram.com/arabou.hq/" class="fa fa-instagram"></a></li>
