--- a/universities/universities.html
+++ b/universities/universities.html
@@ -30,12 +30,12 @@
         <h3 class="types" >الجامعات خارج الكويت
         <div class="countryList">
             <ul>
-            <li><a href=""><img class="flags" src="https://lipis.github.io/flag-icon-css/flags/4x3/gb.svg">المملكة المتحدة</a></li>
-            <li><a href=""><img class="flags" src="https://lipis.github.io/flag-icon-css/flags/4x3/us.svg">الولايات المتحدة الامريكية</a></li>
-            <li><a href=""><img class="flags" src="https://lipis.github.io/flag-icon-css/flags/4x3/au.svg">استراليا</a></li>
-            <li><a href=""><img class="flags" src="https://lipis.github.io/flag-icon-css/flags/4x3/ie.svg">جمهورية ايرلندا</a></li>
-            <li><a href=""><img class="flags" src="https://lipis.github.io/flag-icon-css/flags/4x3/bh.svg">مملكة البحرين</a></li>
-            <li><a href=""><img class="flags" src="https://lipis.github.io/flag-icon-css/flags/4x3/ae.svg">دولة الامارات العربية المتحدة</a></li>
+            <li><a href="../universities/ukunis.html"><img class="flags" src="https://lipis.github.io/flag-icon-css/flags/4x3/gb.svg">المملكة المتحدة</a></li>
+            <li><a href="../universities/usaunis.html"><img class="flags" src="https://lipis.github.io/flag-icon-css/flags/4x3/us.svg">الولايات المتحدة الامريكية</a></li>
+            <li><a href="../universities/australia.html"><img class="flags" src="https://lipis.github.io/flag-icon-css/flags/4x3/au.svg">استراليا</a></li>
+            <li><a href="../universities/ireland.html"><img class="flags" src="https://lipis.github.io/flag-icon-css/flags/4x3/ie.svg">جمهورية ايرلندا</a></li>
+            <li><a href="../universities/bahrain.html"><img class="flags" src="https://lipis.github.io/flag-icon-css/flags/4x3/bh.svg">مملكة البحرين</a></li>
+            <li><a href="../universities/uae.html"><img class="flags" src="https://lipis.github.io/flag-icon-css/flags/4x3/ae.svg"> الامارات العربية المتحدة</a></li>
         </ul>
         </div>
     </h3>
