--- a/universities/kuwaitunis.html
+++ b/universities/kuwaitunis.html
@@ -50,7 +50,7 @@
             </li>
 
             <li>
-                <a href="">
+                <a href="../kuwaitUniversities/aum.html">
                     <figure>
                         <img class="kuwaitUniversities" src="https://s3.eu-north-1.amazonaws.com/images.free-apply.com/uni/gallery/lg/1041400009/44f0903d4d0e58b06a3e22ae7530fc9404e7cdfc.jpg" alt="جامعة الشرق الاوسط الامريكية" >
                         <figcaption>جامعة الشرق الاوسط الامريكية</figcaption>
@@ -109,38 +109,6 @@
 
         </div>
 
-    <!--
-        <div class="row1">
-
-            <li>
-                <a href="">
-                    <figure>
-                        <img class="kuwaitUniversities" src="https://i.prcdn.co/img?regionKey=0b6JI2piY0mBMVNyqacyZg%3D%3D" alt="كلية الكويت التقنية" >
-                        <figcaption>كلية الكويت التقنية</figcaption>
-                    </figure>
-                </a>
-            </li>
-
-             <li>
-                <a href="">
-                    <figure>
-                        <img class="kuwaitUniversities" src="https://photos.wikimapia.org/p/00/05/49/15/00_big.jpg" alt="كلية ألجونكوين الكندية في الكويت" >
-                        <figcaption>كلية ألجونكوين الكندية في الكويت</figcaption>
-                    </figure>
-                </a>
-            </li>
-
-
-            <li>
-                <a href="">
-                    <figure>
-                        <img class="kuwaitUniversities" src="https://d1wnoevxju5lec.cloudfront.net/storage/attachments/5694/89_821206_highres.jpg" alt="الهيئة العامة للتعليم التطبيقي والتدريب   " >
-                        <figcaption>الهيئة العامة للتعليم التطبيقي والتدريب</figcaption>
-                    </figure>
-                </a>
-            </li>
-        </div>
-    -->
 
         </div>
     </ul>
