--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
         <img class="gif"src="https://media4.giphy.com/media/IvQoSDYloMgRa/giphy.gif">
         <h3 class="intro"><a href="https://www.mohe.edu.kw/site/">اضغط هنا لزيارة موقع التعليم العالي!</a><img class="ministry"src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1c/Emblem_of_Kuwait.svg/1200px-Emblem_of_Kuwait.svg.png"></h3>
     </div>
-
+<img class="graduate" src="./images/output-onlinepngtools (1).png">
+<hr>
+<hr>
+<hr>
     <div class="footer">
         <p>التواصل الاجتماعي</p>
         <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
