--- a/universities/australia.html
+++ b/universities/australia.html
@@ -32,7 +32,7 @@
         <div class="row1">
 
             <li>
-                <a href="">
+                <a href="../australiaUnis/nationalAus.html">
                     <figure>
                         <img class="kuwaitUniversities" src="https://images2.content-hci.com/commimg/myhotcourses/blog-inline/myhc_44356.jpg">
                         <figcaption>جامعة استراليا الوطنية</figcaption>
@@ -41,7 +41,7 @@
             </li>
 
             <li>
-                <a href="">
+                <a href="../australiaUnis/melbourne.html">
                     <figure>
                         <img class="kuwaitUniversities" src="https://images5.content-hci.com/commimg/myhotcourses/blog-inline/myhc_44357.jpg">
                         <figcaption>جامعة ملبورن</figcaption>
@@ -50,7 +50,7 @@
             </li>
 
             <li>
-                <a href="">
+                <a href="../australiaUnis/sydney.html">
                     <figure>
                         <img class="kuwaitUniversities" src="https://images5.content-hci.com/commimg/myhotcourses/blog-inline/myhc_44358.jpg" >
                         <figcaption>جامعة سيدني</figcaption>
@@ -59,7 +59,7 @@
             </li>
 
             <li>
-                <a href="">
+                <a href="../australiaUnis/newsouth.html">
                     <figure>
                         <img class="kuwaitUniversities" src="https://images8.content-hci.com/commimg/myhotcourses/blog-inline/myhc_44359.jpg">
                         <figcaption>جامعة نيو ساوث ويلز</figcaption>
