--- a/universities/ireland.html
+++ b/universities/ireland.html
@@ -32,7 +32,7 @@
         <div class="row1">
 
             <li>
-                <a href="">
+                <a href="../irelandUnis/dublin.html">
                     <figure>
                         <img class="kuwaitUniversities" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Dubl%C3%ADn_-_Trinity_College_-_20170826172210.jpg/280px-Dubl%C3%ADn_-_Trinity_College_-_20170826172210.jpg">
                         <figcaption>جامعة دبلن</figcaption>
@@ -41,7 +41,7 @@
             </li>
 
             <li>
-                <a href="">
+                <a href="../irelandUnis/collegedublin.html">
                     <figure>
                         <img class="kuwaitUniversities" src="https://www.educationinireland.com/images_upload/EiI/en/Where-can-I-study-/View-all-Universities-Colleges/UCD_2017.jpg">
                         <figcaption>جامعة كوليدج دبلن</figcaption>
@@ -50,7 +50,7 @@
             </li>
 
             <li>
-                <a href="">
+                <a href="../irelandUnis/nationalireland.html">
                     <figure>
                         <img class="kuwaitUniversities" src="https://images7.content-hci.com/commimg/myhotcourses/blog-inline/myhc_45628.jpg" >
                         <figcaption>جامعة ايرلندا الوطنية غالواي</figcaption>
@@ -59,7 +59,7 @@
             </li>
 
             <li>
-                <a href="">
+                <a href="../irelandUnis/corkcollege.html">
                     <figure>
                         <img class="kuwaitUniversities" src="https://images6.content-hci.com/commimg/myhotcourses/blog-inline/myhc_45626.jpg">
                         <figcaption>جامعة كوليدج كورك</figcaption>
