--- a/ukUniversities/saintandrews.html
+++ b/ukUniversities/saintandrews.html
@@ -32,12 +32,12 @@
         </div>
         <div class="row2">
         <li class="detail"></li>
-        <li class="detail"><a href="https://www.ox.ac.uk/">قم بزيارة موقع جامعة</a>
+        <li class="detail"><a href="https://www.st-andrews.ac.uk/">قم بزيارة موقع جامعة سانت اندروز</a>
             <br>
             <br>
-            <a href="https://www.instagram.com/oxford_uni/" class="fa fa-instagram"></a></li>
+            <a href="https://www.instagram.com/uniofstandrews" class="fa fa-instagram"></a></li>
         </div>
-        <li><img class="pics" src=""></li>
+        <li><img class="pics" src="https://i.pinimg.com/originals/d9/86/6f/d9866fabcae679bab12f5ebe85d2edb0.jpg"></li>
         
     </ul>
     
