--- a/usaUniversities/colombia.html
+++ b/usaUniversities/colombia.html
@@ -32,12 +32,12 @@
         </div>
         <div class="row2">
         <li class="detail"></li>
-        <li class="detail"><a href="https://www.ox.ac.uk/">قم بزيارة موقع جامعة</a>
+        <li class="detail"><a href="https://www.columbia.edu/">قم بزيارة موقع جامعة كولومبيا</a>
             <br>
             <br>
-            <a href="https://www.instagram.com/oxford_uni/" class="fa fa-instagram"></a></li>
+            <a href="https://www.instagram.com/columbia/" class="fa fa-instagram"></a></li>
         </div>
-        <li><img class="pics" src=""></li>
+        <li><img class="pics" src="https://wjm.s3.amazonaws.com/womenleaderinco/uploads/133_1576257529.jpg"></li>
         
     </ul>
     
