--- a/irelandUnis/collegedublin.html
+++ b/irelandUnis/collegedublin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>جامعة استراليا الوطنية</title>
+    <title>جامعة كوليدج دبلن</title>
     <link rel="stylesheet" href="/style.css" > 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -23,7 +23,7 @@
         </form>
     </nav>
 
-    <h1 class="slogan">جامعة استراليا الوطنية</h1>
+    <h1 class="slogan">جامعة كوليدج دبلن</h1>
 
     <ul class="boxes"> 
         <div class="row2">
@@ -32,10 +32,10 @@
         </div>
         <div class="row2">
         <li class="detail"></li>
-        <li class="detail"><a href="https://www.anu.edu.au/">قم بزيارة موقع جامعة استراليا الوطنية</a>
+        <li class="detail"><a href="https://www.ucd.ie/">قم بزيارة موقع جامعة كوليدج دبلن</a>
             <br>
             <br>
-            <a href="https://instagram.com/sydney_uni/" class="fa fa-instagram"></a></li>
+            <a href="https://instagram.com/universitycollegedublin" class="fa fa-instagram"></a></li>
         </div>
         <li><img class="pics" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSwOzBSyPC8C0_kKkwq0UHKEooxsxNYLNftFQ&usqp=CAU"></li>
         
