--- a/irelandUnis/corkcollege.html
+++ b/irelandUnis/corkcollege.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>جامعة استراليا الوطنية</title>
+    <title>جامعة كوليدج كورك</title>
     <link rel="stylesheet" href="/style.css" > 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -23,7 +23,7 @@
         </form>
     </nav>
 
-    <h1 class="slogan">جامعة استراليا الوطنية</h1>
+    <h1 class="slogan">جامعة كوليدج كورك</h1>
 
     <ul class="boxes"> 
         <div class="row2">
@@ -32,12 +32,12 @@
         </div>
         <div class="row2">
         <li class="detail"></li>
-        <li class="detail"><a href="https://www.anu.edu.au/">قم بزيارة موقع جامعة كوليدج كورك</a>
+        <li class="detail"><a href="https://www.ucc.ie/en/">قم بزيارة موقع جامعة كوليدج كورك</a>
             <br>
             <br>
-            <a href="https://instagram.com/sydney_uni/" class="fa fa-instagram"></a></li>
+            <a href="https://www.instagram.com/universitycollegecork/" class="fa fa-instagram"></a></li>
         </div>
-        <li><img class="pics" src="https://www.logolynx.com/images/logolynx/e9/e9f50dfc47f815c697de151636403c3c.jpeg"></li>
+        <li><img class="pics" src="https://www.heraldry-wiki.com/heraldrywiki/images/d/d6/Ucc.jpg"></li>
         
     </ul>
     
